<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingEnd="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:id="@+id/llhApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dialog_about_label_app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dialog_about_label_app_name" />

                <TextView
                    android:id="@+id/dialog_about_app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="2"
                    android:text="@string/app_name"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llhVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dialog_about_label_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dialog_about_label_version" />

                <TextView
                    android:id="@+id/dialog_about_app_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="2"
                    android:text="@string/dialog_about_app_version"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llhDeveloper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dialog_about_label_developer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dialog_about_label_developer" />

                <TextView
                    android:id="@+id/dialog_about_app_developer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="2"
                    android:text="@string/dialog_about_app_developer"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llhOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dialog_about_label_owner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dialog_about_label_owner" />

                <TextView
                    android:id="@+id/dialog_about_owner_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="2"
                    android:text="@string/dialog_about_owner_name"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llhPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dialog_about_label_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dialog_about_label_phone" />

                <TextView
                    android:id="@+id/dialog_about_owner_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="2"
                    android:autoLink="phone" android:text="@string/dialog_about_owner_phone"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llhWww"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dialog_about_label_www"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dialog_about_label_www" />

                <TextView
                    android:id="@+id/dialog_about_owner_www"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="2"
                    android:autoLink="web" android:text="@string/dialog_about_owner_www"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <TextView
                android:id="@+id/dialog_about_label_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                 android:text="@string/dialog_about_label_email" />

            <TextView
                android:id="@+id/dialog_about_owner_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:autoLink="email"
                android:text="@string/dialog_about_owner_email" />

            <TextView
                android:id="@+id/dialog_about_label_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/dialog_about_label_address" />

            <TextView android:id="@+id/dialog_about_owner_postal_address" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ellipsize="none" android:scrollHorizontally="false" android:autoLink="map" android:text="@string/dialog_about_owner_address"  />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>